// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render facility avatar when variant is facility 1`] = `
<circle
  aria-label="Avatar"
  class="avatar"
>
  <div
    class="avatar-icon"
  >
    <svg
      class="facility"
    />
  </div>
</circle>
`;

exports[`Avatar should render image avatar when image is passed in 1`] = `
<circle
  aria-label="Avatar"
  class="avatar"
>
  <img
    alt="placeholder"
    src="test-file-stub"
  />
</circle>
`;

exports[`Avatar should render intials avatar when initials are passed in 1`] = `
<circle
  aria-label="Avatar"
  class="avatar"
>
  <text>
    JS
  </text>
</circle>
`;

exports[`Avatar should render user avatar when variant is user 1`] = `
<circle
  aria-label="Avatar"
  class="avatar"
>
  <div
    class="avatar-icon"
  >
    <svg
      class="user"
    />
  </div>
</circle>
`;
